# ZeaVis-Edu

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  tsconfig.base.json
.github/workflows/: deploy.yml
.moon/: toolchain.yml  workspace.yml
Machine_Learning/: README.md  convert_onnx.py  notebook.ipynb  preprocessing.py  requirements.txt  save_model.py  validate_onnx_parity.py
Machine_Learning/best_model/: best_model.keras
Machine_Learning/model/saved_model/: fingerprint.pb  saved_model.pb
Machine_Learning/model/tfjs_model/: model.json
apps/api/: Dockerfile  drizzle.config.ts  moon.yml  package.json  tsconfig.json
apps/api/drizzle/: 0000_harsh_arachne.sql  0001_cute_lyja.sql  0002_lumpy_smasher.sql
apps/api/src/: index.ts
apps/ml-service/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  main.py  model.py  moon.yml  requirements.txt  schemas.py  test_model.py
apps/ml-service/src/: config.rs  error.rs  image.rs  main.rs  model.rs  routes.rs
apps/web/: Dockerfile  index.html  moon.yml  nginx.conf  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/src/: app.tsx  index.css
docs/superpowers/plans/: 2026-05-22-api-ml-service-migration.md  2026-05-22-backend-image-classification.md  2026-05-22-docker-deployment.md  2026-05-22-fullstack-education-catalog.md  2026-05-22-fullstack-monorepo-scaffold.md  2026-05-22-js-ts-dependency-update.md  2026-05-22-ml-service.md  2026-05-22-production-mvp.md  2026-05-22-root-readme.md  (+1 more)
(+57 files in other folders)
